--- a/aula/public/css/Form.css
+++ b/aula/public/css/Form.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 body {
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     margin: 0;
     padding: 0;
     color: #fff;
@@ -22,8 +22,8 @@ body {
     padding: 20px;
     border-radius: 10px;
     background-color: #ffffff;
-    box-shadow: 0 0 10px #0077FF;
-    border: 2px solid #0077FF;
+    box-shadow: 0 0 10px #0077ff;
+    border: 2px solid #0077ff;
 }
 
 .formLogin {
@@ -70,7 +70,7 @@ body {
 
 .formLogin input:focus {
     border-color: #1f008d;
-    box-shadow: 0 0 5px #0077FF;
+    box-shadow: 0 0 5px #0077ff;
 }
 
 .btn {
@@ -82,20 +82,20 @@ body {
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s;
-    background-color: #0077FF;
+    background-color: #0077ff;
     color: #fff;
     margin-top: 10px;
 }
 
 .btn:hover {
-    background-color:#0077FF;
-    box-shadow: 0px 0px 10px #0077FF;
+    background-color: #0077ff;
+    box-shadow: 0px 0px 10px #0077ff;
     transform: translateY(-2px);
 }
 
 .btn-secondary {
     background-color: #333;
-    color: #0077FF;
+    color: #0077ff;
     padding: 10px;
     border-radius: 5px;
     text-decoration: none;
@@ -106,20 +106,19 @@ body {
 }
 
 .btn-secondary:hover {
-    background-color: #0077FF;
+    background-color: #0077ff;
     color: #fff;
 }
 
 .logo-link {
     display: block;
     padding: 10px;
-    position: absolute; 
+    position: absolute;
     top: 0;
     left: 100px; /* Move para a direita */
 }
 
 .logo-img {
-    height: 120px; 
+    height: 120px;
     width: auto;
 }
-
