--- a/aula/public/css/exercicio.css
+++ b/aula/public/css/exercicio.css
@@ -93,7 +93,9 @@ body {
     padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
-    transition: transform 0.3s, box-shadow 0.3s;
+    transition:
+        transform 0.3s,
+        box-shadow 0.3s;
 }
 
 .card:hover {
