--- a/src/public/css/consulta.css
+++ b/src/public/css/consulta.css
@@ -153,4 +153,38 @@ body {
         text-align: left;
         margin-right: 10px;
     }
+    /* Styles botões download de PDF E CSV */
+.download-buttons {
+    margin-bottom: 20px;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 18px;
+    font-weight: 600;
+    border-radius: 6px;
+    color: white;
+    text-decoration: none;
+    transition: all 0.25s ease;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.btn-pdf {
+    background: #e63946;
+}
+
+.btn-pdf:hover {
+    background: #b71c1c;
+    transform: scale(1.05);
+}
+
+.btn-csv {
+    background: #2a9d8f;
+}
+
+.btn-csv:hover {
+    background: #1b6f63;
+    transform: scale(1.05);
+}
+
 }
